[project]
name = "bboxtools"
version = "0.0.1"
description = "Converting bounding box annotations to popular formats like a breeze."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
keywords = [
    "bbox",
    "bounding box",
    "annotation",
    "coco",
    "yolo",
    "voc",
    "object detection",
]
authors = [
    { name = "Olivier D'Ancona", email = "olivier_dancona@hotmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = ["pandas", "xmltodict"]

[project.urls]
repository = "https://github.com/ODAncona/bbox-tools.git"
documentation = "https://github.com/ODAncona/bbox-tools/tree/main/documentation"


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
